--- a/app/assets/stylesheets/wishlists.scss
+++ b/app/assets/stylesheets/wishlists.scss
@@ -36,6 +36,10 @@ a{
     margin-left: 0px;
     margin-right: 0px;
   }
+  .booknowbtn{
+    margin:0px !important;
+    padding:5px !important;
+  }
   
   
 }
