--- a/app/views/users/admin_new.html.erb
+++ b/app/views/users/admin_new.html.erb
@@ -48,7 +48,7 @@
 
                                     <div class="col-md-4 col-xs-4"></div>
 
-                                    <div class="col-md-4 col-xs-4"><%= f.submit "Register", class: "btn btn-default" %></div>                                    <div class="col-md-4 col-xs-4"></div>                                        <div>    
+                                    <div class="col-md-4 col-xs-4"><%= f.submit "Register", class: "btn btn-default newbtn" %></div>                                    <div class="col-md-4 col-xs-4"></div>                                        <div>    
                                         <%= button_to "Login with Google",
                                                                                 "/oauth/google_oauth2",
                                                                                 method: :post,
