--- a/app/views/dashboards/admin_dashboard.html.erb
+++ b/app/views/dashboards/admin_dashboard.html.erb
@@ -1,12 +1,12 @@
 <!-- Header -->
 <div class="row" style="background:#2c3e50; color:white; padding:15px;">
-<div class="container-fluid">
-    <div class="col-md-6">
-<h3>🏠 RealEstate Admin Panel</h3>
-</div>
+    <div class="container-fluid">
+        <div class="col-md-6">
+            <h3 class="header-connect">🏠 RealEstate Admin Panel</h3>
+        </div>
 
-<h3 class="pull-right " >Welcome Admin, <%= current_user.name %></h3>
-</div>
+        <h3 class="pull-right header-connect" >Welcome Admin, <%= current_user.name %></h3>
+    </div>
 
 </div>
 
@@ -99,7 +99,7 @@
                         <% User.order(created_at: :desc).limit(5).each do |u| %>
                         <tr>
                             <td><%= u.name %></td>
-                            <td><%= u.email %></td>
+                            <td class="email"><%= u.email %></td>
                             <td><%= u.roles.pluck(:name).join(', ') %></td>
                         </tr>
                         <% end %>
