--- a/app/views/dashboards/allusers_agents.html.erb
+++ b/app/views/dashboards/allusers_agents.html.erb
@@ -1,52 +1,40 @@
-
-<div class="row">
-  <div class="container-fluid">
-      <span class="pull-right" style="margin:20px;">
-        <% if logged_in?  && current_user.admin? %>
-            
-            <%= link_to "Back to Dashboard", admin_dashboard_path, class: "btn btn-primary mb-5" %>
-          <%end%> 
-      </span>
-  </div>
-</div>
 <div class="container">
-  
-<h1>All Agents</h1>
-  <table class="table table-striped">
-  <thead>
-    <tr>
-      
-      <th scope="col">Agent Name</th>
-      <th scope="col">Email</th>
-       <% if logged_in? %>
-      <th scope="col">Actions</th>
-      <%end%>
-    </tr>
-  </thead>
-  <tbody>
-    
-    
-        <% @users.each do |user| %>
-    
+  <h1>All Agents</h1>
+
+  <div class="table-responsive">
+    <table class="table table-striped align-middle">
+      <thead>
         <tr>
-            <td><%= user.name %></td>
-            <td><%= user.email%></td>
-             <% if logged_in? %>
-            <td><%= button_to "Remove Agent", users_path(user), method: :delete, data: { confirm: "Are you sure?" } ,class:"card-link btn btn-danger" %></div></td>
-            <%end%>
-        </tr>   
+          <th>Agent Name</th>
+          <th>Email</th>
+          <% if logged_in? %>
+            <th>Actions</th>
+          <% end %>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% @users.each do |user| %>
+            <tr>
+              <td data-label="Agent Name"><%= user.name %></td>
+
+              <td class="email-cell" data-label="Email">
+                <%= user.email %>
+              </td>
+
+              <% if logged_in? %>
+                <td data-label="Action">
+                  <%= button_to "Remove",
+                    users_path(user),
+                    method: :delete,
+                    data: { confirm: "Are you sure?" },
+                    class: "btn btn-danger btn-sm"
+                  %>
+                </td>
+              <% end %>
+            </tr>
         <% end %>
-      
-</td>
-      
-    </tr>
-    
-  </tbody>
-
-
-</table>
-  <div class="flickr_pagination mt-2 mb-2">
-  <%# <%= will_paginate(@users, container: false) %> 
-</div>
-
+      </tbody>
+    </table>
+  </div>
 </div>
