--- a/app/views/properties/_properties_list.html.erb
+++ b/app/views/properties/_properties_list.html.erb
@@ -1,13 +1,15 @@
-<div class="row">
-  <div class="container-fluid">
-      <span class="pull-right" style="margin:20px;">
-        <% if logged_in?  && current_user.admin? %>
-            <%= link_to "Create Property", new_property_path, class: "btn btn-warning mb-5" %>
-            <%= link_to "Back to Dashboard", admin_dashboard_path, class: "btn btn-primary mb-5" %>
-          <%end%> 
-      </span>
-  </div>
+<div class="row" style="margin:20px;">
+  <span class="extrabtn" >
+    <% if logged_in?  && current_user.admin? %>
+        <%= link_to "Create Property", new_property_path, class: "btn btn-warning mb-5" %>
+        <%= link_to "Back to Dashboard", admin_dashboard_path, class: "btn btn-primary mb-5" %>
+      <%end%> 
+  </span>
+  
+  
 </div>
+
+
 <div class="col-md-12 clear">
   <div class="col-xs-10 page-subheader sorting pl0">
     <ul class="sort-by-list">
