--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -46,7 +46,7 @@
 
                                     <div class="col-md-4 col-xs-4"></div>
 
-                                    <div class="col-md-4 col-xs-4"><%= f.submit "Register", class: "btn btn-default" %></div>    
+                                    <div class="col-md-4 col-xs-4"><%= f.submit "Register", class: "btn btn-default newbtn" %></div>    
                                     
                                     
                                                                     <div class="col-md-4 col-xs-4"></div>                                        <div>                                    </div>                                    <% end %></div>                                <p>  you already have an existing account<%= link_to "login", login_path %></p>         
