--- a/app/views/layouts/admin_layout.html.erb
+++ b/app/views/layouts/admin_layout.html.erb
@@ -12,7 +12,7 @@
     <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-     <%= stylesheet_link_tag 'bootstrap-select.min', media: 'all' , 'data-turbolinks-track': 'reload' %> 
+    <%= stylesheet_link_tag "css/bootstrap-select.min", media: "all" ,'data-turbolinks-track': 'reload'%>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"  data-turbolinks-track= 'reload'></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" data-turbolinks-track="reload"></script>
     <script src="https://js.stripe.com/clover/stripe.js"></script>
