--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -10,3 +10,8 @@
         margin-top: 10px !important;
     }
 }
+@media screen and (max-width:767px){
+     .sbquery{
+        margin-top: 10px !important;
+    }
+}
