--- a/app/views/dashboards/admin_dashboard.html.erb
+++ b/app/views/dashboards/admin_dashboard.html.erb
@@ -5,7 +5,10 @@
             <h3 class="header-connect">🏠 RealEstate Admin Panel</h3>
         </div>
 
-        <h3 class="pull-right header-connect" >Welcome Admin, <%= current_user.name %></h3>
+        <div class="adminhead col-md-6">
+            <h3 class=" header-connect" >Welcome Admin, <%= current_user.name %></h3>
+            
+        </div>
     </div>
 
 </div>
