--- a/app/views/dashboards/agentcustomerlst.html.erb
+++ b/app/views/dashboards/agentcustomerlst.html.erb
@@ -1,10 +1,18 @@
 
+<div class="page-head"> 
+            <div class="container">
+                <div class="row">
+                    <div class="page-head-content">
+                        <h1 class="page-title text-center">Agent Customer List</h1>               
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
 
-
-<div class="container-fluid">
-  <h2 class="text-center">Agent Customer List</h2>
+<div class="container">
+  
 
   
   <table class="table table-bordered table-striped">
