--- a/app/views/dashboards/agentpropertylst.html.erb
+++ b/app/views/dashboards/agentpropertylst.html.erb
@@ -1,5 +1,15 @@
-<div class="container-fluid">
-  <h2 class="text-center">Agent Property List</h2>
+<div class="page-head"> 
+            <div class="container">
+                <div class="row">
+                    <div class="page-head-content">
+                        <h1 class="page-title text-center">Agent Property List</h1>               
+                    </div>
+                </div>
+            </div>
+        </div>
+
+<div class="container">
+
 
   
   <table class="table table-bordered table-striped">
