--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -1,4 +1,14 @@
-<div class="container-fluid">
+<div class="page-head"> 
+    <div class="container">
+        <div class="row">
+            <div class="page-head-content">
+                <h1 class="page-title text-center">Transactions Dashboard</h1>               
+            </div>
+        </div>
+    </div>
+  </div>
+
+<div class="container" style="margin-top:50px">
   <h2 class="text-center">Transactions Dashboard</h2>
 
   <h3>Payments (PaymentIntents)</h3>
@@ -105,7 +115,7 @@
 
 </div>
 <div class="row">
-  <div class="container-fluid">
+  <div class="container">
       <span class="pull-right" style="margin:20px;">
         <% if logged_in?  && current_user.admin? %>
             
