--- a/app/views/payments/success.html.erb
+++ b/app/views/payments/success.html.erb
@@ -14,7 +14,7 @@
 <%# <a href="/" class="btn btn-primary">Return to Home</a> %>
 
 
-<div class="container-fluid py-5">
+<div class="container py-5">
   <div class="row justify-content-center" style="display:flex;justify-content:center;text-align:center;">
     <div class="col-lg-8 col-md-10">
 
