--- a/app/views/dashboards/admin_dashboard.html.erb
+++ b/app/views/dashboards/admin_dashboard.html.erb
@@ -1,22 +1,24 @@
-<!-- Header -->
-<div class="row" style="background:#2c3e50; color:white; padding:15px;">
-    <div class="container-fluid">
-        <div class="col-md-6">
-            <h3 class="header-connect">🏠 RealEstate Admin Panel</h3>
-        </div>
 
-        <div class="adminhead col-md-6">
-            <h3 class=" header-connect" >Welcome Admin, <%= current_user.name %></h3>
-            
+
+<div class="page-head"> 
+    <div class="container">
+        <div class="row">
+            <div class="page-head-content">
+                <div class="adminhead col-md-6">
+                    <h1 class="header-connect page-title">🏠 RealEstate Admin Panel</h1>
+                </div>
+                <div class="adminhead col-md-6 ">
+                    <h1 class=" header-connect page-title" >Welcome Admin, <%= current_user.name %></h1>
+                </div>
+            </div>
         </div>
     </div>
-
 </div>
 
 
 <br>
 
-<div class="container-fluid">
+<div class="container">
     <div class="row">
         <div class="col-md-3">
             <div class="panel panel-primary">
@@ -78,9 +80,11 @@
                     <a href="<%= users_path %>" class="actionbtn btn btn-warning">👤 Manage Users</a>
                     <a href="<%= properties_path %>" class="actionbtn btn btn-success">🏘 Manage Properties</a>
                     <a href="<%= admin_agentlist_path %>" class="actionbtn btn btn-danger">👤 Manage Agents</a>
-                    <a href="<%= payments_path%>" class="actionbtn btn btn-info">📦 View Bookings</a>
-                    <%# <a href="/signup/agent" class="btn btn-primary">➕ Create Agent</a>
-                    <a href="/signup" class="btn btn-danger">➕ Create User</a> %>
+                   
+                    <%= link_to "View Bookings", admin_dashboard_booked_properties_path , class: "actionbtn btn btn-success"%>
+                    <a href="<%= payments_path%>" class="actionbtn btn btn-info">📦 View transaction</a>
+                    <a href="/signup/agent" class="actionbtn btn btn-primary">➕ Create Agent</a>
+                    <a href="/signup" class="actionbtn btn btn-danger">➕ Create User</a>
                 </div>
             </div>
         </div>
