--- a/app/views/dashboards/agent_dashboard.html.erb
+++ b/app/views/dashboards/agent_dashboard.html.erb
@@ -1,18 +1,22 @@
-<div class="row" style="background:#2c3e50; color:white; padding:15px;">
-<div class="container-fluid">
-    <div class="col-md-6">
-<h3 class="header-connect">🏠 RealEstate Agent Panel</h3>
+
+
+<div class="page-head"> 
+    <div class="container">
+        <div class="row">
+            <div class="page-head-content">
+                <div class="adminhead col-md-6">
+                    <h1 class=" header-connect page-title">🏠 RealEstate Agent Panel</h1>
+                </div>
+                <div class="adminhead col-md-6 ">
+                    <h1 class=" header-connect page-title" >Welcome Agent, <%= current_user.name %></h1>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-
-<h3 class="pull-right header-connect" >Welcome Agent, <%= current_user.name %></h3>
-</div>
-
-</div>
-
-
 <br>
 
-<div class="container-fluid">
+<div class="container">
     <div class="row">
         <div class="col-md-3">
             <div class="panel panel-primary">
@@ -77,7 +81,7 @@
                         <%=link_to   "🏘 Manage Properties",agent_dashboard_property_list_path,class:"btn btn-primary actionbtn" %>
                         <%=link_to   "👤 View Customer",agent_dashboard_customer_list_path,class:"btn btn-info actionbtn" %>
                         <%=link_to   "📦 View Booked Property",agent_dashboard_booked_property_list_path,class:"btn btn-success actionbtn" %>
-                        <%=link_to   "➕ Create Property",new_property_path,class:"btn btn-danger" %>
+                        <%=link_to   "➕ Create Property",new_property_path,class:"btn btn-danger actionbtn" %>
                 </div>
             </div>
         </div>
