--- a/app/views/dashboards/agentbookedpropertylst.html.erb
+++ b/app/views/dashboards/agentbookedpropertylst.html.erb
@@ -1,7 +1,15 @@
+<div class="page-head"> 
+            <div class="container">
+                <div class="row">
+                    <div class="page-head-content">
+                        <h1 class="page-title text-center">Agent Sold Properties</h1>               
+                    </div>
+                </div>
+            </div>
+        </div>
 
+<div class="container">
 
-<div class="container-fluid">
-  <h2 class="text-center">Agent Sold Properties</h2>
 
   
   <table class="table table-bordered table-striped">
