--- a/app/views/pages/chat_query_list.html.erb
+++ b/app/views/pages/chat_query_list.html.erb
@@ -1,4 +1,14 @@
-<div class="container-fluid">
+<div class="page-head"> 
+            <div class="container">
+                <div class="row">
+                    <div class="page-head-content">
+                        <h1 class="page-title text-center">List of Users Queries</h1>               
+                    </div>
+                </div>
+            </div>
+</div>
+
+<div class="container" style="margin-top:50px">
   <div class="panel panel-default">
     <div class="panel-heading text-center" style="background:#FDC600;">
            <span class="test center">List of Users Queries</span>
