--- a/app/views/properties/_properties_list.html.erb
+++ b/app/views/properties/_properties_list.html.erb
@@ -18,9 +18,7 @@
                     class: "order_by_date sortdate" do %>
           Property Date <i class="fa fa-sort-amount-asc"></i>
         <% end %>
-        <%# <a href="javascript:void(0);" class="order_by_date" data-orderby="property_date" data-order="ASC"> %>
-        <%# Property Date <i class="fa fa-sort-amount-asc"></i> %>
-        <%# </a> %>
+        
       </li>
 
       <li>
@@ -28,9 +26,7 @@
                     class: "order_by_price sortdate" do %>
           Property Price <i class="fa fa-sort-numeric-desc"></i>
         <% end %>
-        <%# <a href="javascript:void(0);" class="order_by_price" data-orderby="property_price" data-order="DESC"> %>
-        <%# Property Price <i class="fa fa-sort-numeric-desc"></i> %>
-        <%# </a> %>
+        
       </li>
     </ul>
 
@@ -127,15 +123,19 @@
             (<%= property.bathroom %>)|
             <img src="<%= asset_path('icon/cars.png') %>">
             (<%= property.gerage %>)
+
+            
+          </div>
+          <div>
             <% if logged_in? && current_user.admin? %>
                 <%= link_to  property_path(property),
-                            method: :delete,
-                            remote:true,
-                            data: { confirm: "Are you sure?" } do %>
-                    <i class="fa fa-trash-o" style="font-size:28px;color:#a09a9a;padding-top:5px;"></i>           
+                          method: :delete,
+                          remote:true,
+                          data: { confirm: "Are you sure?" } do %>
+                  <i class="fa fa-trash-o" style="font-size:28px;color:green;padding-top:5px;"></i>           
                 <% end %>
                 <%= link_to  edit_property_path(property) do %> 
-                <i class="fa fa-edit" style="font-size:28px;color:#a09a9a;padding-top:5px;"></i>
+                <i class="fa fa-edit" style="font-size:28px;color:red;padding-top:5px;"></i>
                 <%end%>
             <%end%>
           </div>
