--- a/app/views/users/agent_new.html.erb
+++ b/app/views/users/agent_new.html.erb
@@ -13,14 +13,10 @@
 <div class="register-area" style="background-color: rgb(249, 249, 249);">
     <div class="container"><%= render 'shared/errors', obj: @user %>        <div style="display: flex;justify-content: center; align-items: center;">
             <div class="col-md-6">
-
                 <div class="box-for overflow">
                     <div class="col-md-12 col-xs-12 register-blocks">
                         <h2>New account : </h2>
                         <%= form_with url: signup_agent_path, model: @user, local: true do |f| %>
-
-
-                        <%# <%= form_with(model: @user, local: true) do |f| %> 
                             <div class="form-group">
                                 <label for="name">Name</label>
                                 <%= f.text_field :name, class: "form-control", id: "name", placeholder: "Enter a username", required: true %>
@@ -46,12 +42,33 @@
                             </div>
                             <div class="text-center">
                                 <div class="row">
-
                                     <div class="col-md-4 col-xs-4"></div>
+                                    <div class="col-md-4 col-xs-4">
+                                        <%= f.submit "Register", class: "newbtn btn btn-default" %>
+                                    </div>                                    
+                                    <div class="col-md-4 col-xs-4"></div>  
+                                <div>                                    
 
-                                    <div class="col-md-4 col-xs-4"><%= f.submit "Register", class: "newbtn btn btn-default" %></div>                                    <div class="col-md-4 col-xs-4"></div>                                        <div>                                    </div>                                    <% end %></div>                                <p>  you already have an existing account<%= link_to "login", login_agent_path %></p>          
-                                    <%= button_to "Login with Google",
-                                                                                "/oauth/google_oauth2",
-                                                                                method: :post,
-                                                                                data: { turbo: false },
-                                                                                class: "login-social" %>               </div>                                </div>                                </div>                                </div>                                </div>
+                            </div>                                    
+                                    
+                        <% end %>
+                    </div> 
+                    <% if current_user&.admin? %>                              
+                    
+                    <%else%>
+                        <p>  You already have an existing Agent Account<%= link_to " login", login_agent_path %></p>  
+                        <p>  You already have an existing User Account<%= link_to " login", login_path %></p>  
+                    <%end%>
+                    <%= button_to "Login with Google",
+                                    "/oauth/google_oauth2",
+                                    method: :post,
+                                    data: { turbo: false },
+                                    class: "login-social" %>               
+                </div>                                
+            </div>                               
+        </div>                              
+    </div>                              
+</div>
+ </div>                              
+</div>
+
