--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -49,7 +49,18 @@
                                     <div class="col-md-4 col-xs-4"><%= f.submit "Register", class: "btn btn-default newbtn" %></div>    
                                     
                                     
-                                                                    <div class="col-md-4 col-xs-4"></div>                                        <div>                                    </div>                                    <% end %></div>                                <p>  you already have an existing account<%= link_to "login", login_path %></p>         
+                                                                    <div class="col-md-4 col-xs-4"></div>                                        <div>                                    </div>                                    <% end %></div>                               
+                                    <% if current_user&.admin? %>                              
+                    
+                                    <%else%>
+                                    <p class="text-center mt-3">you already have an existing account<%= link_to " Login", login_path %></p>
+                                    <p class="text-center mt-3">You don't have an User Account <%= link_to " Login As User", login_agent_path %></p>
+
+                                  
+                                    <%end%>
+                                                                    
+                                                                    
+                                                                         
                                                                      <%= button_to "Login with Google",
                                                                                 "/oauth/google_oauth2",
                                                                                 method: :post,
