design order and booked property page for customer and admin also do changes in admin and agent panel

--- a/app/views/dashboards/agent_dashboard.html.erb
+++ b/app/views/dashboards/agent_dashboard.html.erb
@@ -8,7 +8,7 @@
                     <h1 class=" header-connect page-title">🏠 RealEstate Agent Panel</h1>
                 </div>
                 <div class="adminhead col-md-6 ">
-                    <h1 class=" header-connect page-title" >Welcome Agent, <%= current_user.name %></h1>
+                    <h1 class=" header-connect page-title pull-right" >Welcome Agent, <%= current_user.name %></h1>
                 </div>
             </div>
         </div>
