--- a/app/views/users/admin_new.html.erb
+++ b/app/views/users/admin_new.html.erb
@@ -10,7 +10,7 @@
 <!-- End page header -->
 
 <!-- register-area -->
-<div class="register-area" style="background-color: rgb(249, 249, 249);">
+<div class="register-area" style="background-color: rgb(249, 249, 249);margin-top:50px;">
     <div class="container"><%= render 'shared/errors', obj: @user %>        <div style="display: flex;justify-content: center; align-items: center;">
             <div class="col-md-6">
 
