--- a/app/views/wishlists/index.html.erb
+++ b/app/views/wishlists/index.html.erb
@@ -8,7 +8,7 @@
   </div>
 </div>
 
-<div class="content-area recent-property" style="background-color: #FFF;">
+<div class="content-area recent-property" style="background-color: #FFF; margin-top:50px">
   <div class="container">
     <div class="row">
       <div class="col-md-9 p0 padding-top-40">
