--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -56,7 +56,7 @@
     }
     @media (min-width: 768px) {
       .adminhead h1{
-        text-align: right;
+        // text-align: right;
         font-size: 20px !important;
       }
     }
