--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -9,7 +9,7 @@
 </div>
 
 <!-- Property Area -->
-<div class="content-area recent-property" style="background-color:#FFF;">
+<div class="content-area recent-property" style="background-color:#FFF;margint-top:50px">
   <div class="container">
     <div class="row">
       <% total_booking_money = 0 %>
