--- a/app/views/dashboards/admin_dashboard.html.erb
+++ b/app/views/dashboards/admin_dashboard.html.erb
@@ -8,7 +8,7 @@
                     <h1 class="header-connect page-title">🏠 RealEstate Admin Panel</h1>
                 </div>
                 <div class="adminhead col-md-6 ">
-                    <h1 class=" header-connect page-title" >Welcome Admin, <%= current_user.name %></h1>
+                    <h1 class=" header-connect page-title pull-right" >Welcome Admin, <%= current_user.name %></h1>
                 </div>
             </div>
         </div>
