--- a/app/views/dashboards/allusers_agents.html.erb
+++ b/app/views/dashboards/allusers_agents.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="margin-top:50px;">
   <h1 class="text-center">All Agents</h1>
 
   <div class="table-responsive">
