remove passwords fields from edit for user and agents edit

--- a/app/assets/stylesheets/properties.scss
+++ b/app/assets/stylesheets/properties.scss
@@ -59,6 +59,10 @@ input[value="Register"]{
   background-image: none !important;
   color:black;
 }
+input[value="Save"]{
+  background-image: none !important;
+  color:black;
+}
 input[type="submit"] {
   margin-right: 5px;
   margin-top: 8px;
