--- a/app/views/properties/edit.html.erb
+++ b/app/views/properties/edit.html.erb
@@ -30,10 +30,10 @@
             </div>
 
             <ul>
-              <li><a href="#step1" data-toggle="tab">Step 1</a></li>
-              <li><a href="#step2" data-toggle="tab">Step 2</a></li>
-              <li><a href="#step3" data-toggle="tab">Step 3</a></li>
-              <li><a href="#step4" data-toggle="tab">Finished</a></li>
+              <li style="width:25%"><a href="#step1" data-toggle="tab">Step 1</a></li>
+              <li style="width:25%"><a href="#step2" data-toggle="tab">Step 2</a></li>
+              <li style="width:25%"><a href="#step3" data-toggle="tab">Step 3</a></li>
+              <li style="width:25%"><a href="#step4" data-toggle="tab">Finished</a></li>
             </ul>
 
             <div class="tab-content">
