--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -36,19 +36,10 @@
                                 <label for="email">Mobile Number</label>
                                 <%= f.text_field :mobilenumber, class: "form-control", id: "email", required: true %>
                             </div>
-                            <div class="form-group">
-                                <label for="password">Password</label>
-                                <%= f.password_field :password, class: "form-control", id: "password", required: true %>
-
-                            </div>
-                            <div class="form-group">
-                                <label for="password">Confirm Password</label>
-                                <%= f.password_field :password_confirmation, class: "form-control", id: "password", required: true %>
-
-                            </div>
+                            
                             <div class="text-center">
                                 <div class="row">
 
                                     <div class="col-md-4 col-xs-4"></div>
 
-                                    <div class="col-md-4 col-xs-4"><%= f.submit "Register", class: "btn btn-default" %></div>                                    <div class="col-md-4 col-xs-4"></div>                                        <div>                                    </div>                                    <% end %></div>                                                       </div>                                </div>                                </div>                                </div>                                </div>
+                                    <div class="col-md-4 col-xs-4"><%= f.submit "Save", class: "btn btn-default" %></div>                                    <div class="col-md-4 col-xs-4"></div>                                        <div>                                    </div>                                    <% end %></div>                                                       </div>                                </div>                                </div>                                </div>                                </div>
